--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -101,6 +101,7 @@ input, select, textarea {
 
 	body {
 		background: #242943;
+		video { width: 100%; }
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
