--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2226,6 +2226,15 @@ body, input, select, textarea {
 				}
 
 			}
+/* video */
+
+	.video {
+		border: 0;
+		display: inline-block;
+		position: relative;
+		height: 100%;
+		width: 100%;
+	}
 
 /* List */
 
