--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2227,14 +2227,8 @@ body, input, select, textarea {
 
 			}
 /* video */
-
-	.video {
-		border: 0;
-		display: inline-block;
-		position: relative;
-		height: 100%;
-		width: 100%;
-	}
+.inner { width: 100%; height: 500px; overflow: hidden; margin: 0px auto; position: relative; }
+video { width: 100%; }
 
 /* List */
 
