--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -101,7 +101,6 @@ input, select, textarea {
 
 	body {
 		background: #242943;
-		video { width: 100%; }
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -2227,7 +2226,7 @@ body, input, select, textarea {
 
 			}
 /* video */
-.inner { width: 100%; height: 500px; overflow: hidden; margin: 0px auto; position: relative; }
+.video { width: 100%; height: 500px; overflow: hidden; margin: 0px auto; position: relative; }
 video { width: 100%; }
 
 /* List */
